infra/k8s/tweets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweets
  template:
    metadata:
      labels:
        app: tweets
    spec:
      containers:
      - name: tweets
        image: tweets-service:latest
        resources:
          limits:
            cpu: "250m"
            memory: "300Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: tweets-srv
spec:
  selector:
    app: tweets
  ports:
  - name: tweets
    port: 3000
    protocol: TCP
    targetPort: 3000
