infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress-service
spec:
  rules:
  - host: twitter-clone.dev
    http:
      paths:
      - pathType: Prefix
        path: /auth/?(.*)
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: /tweets/?(.*)
        backend:
          service:
            name: tweets-srv
            port:
              number: 3000
